# RuView

./: .gitignore  .pre-commit-config.yaml  .trivyignore  CLAUDE.md  README.md  SECURITY.md  pyproject.toml  requirements-sensors.txt  requirements.txt
.ezra/plans/: oss-adoption.yaml
.github/: dependabot.yml
.github/workflows/: ci.yml  license-guard.yml  security-scan.yml
.license-guards/: .licensechecker.json  deny.toml  pip-licenses.toml
data/recordings/: demo-60s.jsonl
data/recordings/final_val/: keypoints.jsonl  mock.csi.jsonl
docs/: HOME_SETUP.md  SHOPPING-LIST.md
docs/adr/: ADR-081-phase-a-sensor-drivers.md
rust-port/wifi-densepose-rs/: Cargo.toml
rust-port/wifi-densepose-rs/crates/wifi-densepose-api/: Cargo.toml
rust-port/wifi-densepose-rs/crates/wifi-densepose-api/src/: lib.rs
rust-port/wifi-densepose-rs/crates/wifi-densepose-db/: Cargo.toml
rust-port/wifi-densepose-rs/crates/wifi-densepose-db/src/: lib.rs
scripts/: calibrate_room.py  collect_training_data.py  deploy-hetzner.sh  model-guardian.js  research-wifi-sensing.py  sync-models.sh
ui/: style.css
ui/components/: SensingTab.js
ui/mobile/: package-lock.json  package.json
v1/: requirements-lock.txt  setup.py
v1/src/: __init__.py  app.py  cli.py  config.py  logger.py  main.py
v1/src/api/: dependencies.py  main.py
v1/src/commands/: start.py  status.py  stop.py
v1/src/core/: csi_processor.py  router_interface.py
v1/src/database/: connection.py  models.py
v1/src/hardware/: __init__.py  base.py  health_monitor.py  router_interface.py  sensor_registry.py
v1/src/middleware/: auth.py  cors.py  error_handler.py  rate_limit.py
v1/src/sensing/: __init__.py  alerts.py  backend.py  csv_export.py  multi_sensor_backend.py  recorder.py  ws_server.py
v1/src/services/: hardware_service.py  health_check.py  metrics.py  (+3 more)
(+80 files in other folders)
