[package]
name = "wifi-densepose-api"
version.workspace = true
edition.workspace = true
description = "REST API for WiFi-DensePose"
license.workspace = true
authors = ["rUv <ruv@ruv.net>", "WiFi-DensePose Contributors"]
repository.workspace = true
documentation.workspace = true
keywords = ["wifi", "api", "rest", "densepose", "websocket"]
categories = ["web-programming::http-server", "science"]
readme = "README.md"

[dependencies]
axum = { workspace = true }
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true }
serde_json.workspace = true
tower-http = { version = "0.5", features = ["cors"] }
tracing.workspace = true
wifi-densepose-config = { version = "0.3.0", path = "../wifi-densepose-config" }
wifi-densepose-db = { version = "0.3.0", path = "../wifi-densepose-db" }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
axum = { workspace = true, features = ["tokio"] }
tokio = { workspace = true, features = ["test-util", "macros"] }
